examples/negative/parser_syntax/kind_unknown_theory.kai
# Negative fixture (parser): a `kind` declaration must name a theory
# from the closed catalog. In v1 the only assembled theory is
# `AbelianGroup`; naming anything else is rejected at parse time.

kind Money : NoSuchTheory with unit

fn main() : Int = 0
